--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
         gtag('config', 'UA-153599887-1');
     </script>
-
+    <script data-ad-client="ca-pub-3512964287065310" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
